--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/flights/index">ManageFlights <span class="sr-only">(current)</span></a>
       </li>
        <li class="nav-item active">
-        <a class="nav-link" href="#">ManageHotels <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/hotel/index">ManageHotels <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
