--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,6 +16,9 @@
         <a class="nav-link" href="/booking/new">Booking <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" href="/booking/index">ManageBookings <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="/flights/index">ManageFlights <span class="sr-only">(current)</span></a>
       </li>
        <li class="nav-item active">
